--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 12:39:00 PM</p>
+    <p class="lastupdate">09/15/2020 12:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.3&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.3&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.3&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.3&#176;F</td>
+        <td class="data">49.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">28%</td>
+        <td class="data">27%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.011 inHg (-0.036)</td>
+        <td class="data">30.009 inHg (-0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:49 PM">
-            86.4</span><br/>
+          <span title="12:43:25 PM">
+            87.5</span><br/>
           <span title="07:07:35 AM">
             49.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:49 PM" class="hival">
-            86.4</span>
+          <span title="12:43:25 PM" class="hival">
+            87.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:37:57 PM">
-            50.2</span><br/>
+          <span title="12:39:49 PM">
+            50.5</span><br/>
           <span title="07:43:47 AM">
             42.0</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:43:47 AM">
             79</span><br/>
-          <span title="12:38:15 PM">
-            28</span>
+          <span title="12:42:31 PM">
+            27</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          52
+          53
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 21 hours, 52 minutes</td>
+      <td class="data">13 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 21 hours, 52 minutes</td>
+      <td class="data">13 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
