--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 01:34:00 PM</p>
+    <p class="lastupdate">09/15/2020 01:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.6&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.6&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.6&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.4&#176;F</td>
+        <td class="data">40.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.995 inHg (-0.052)</td>
+        <td class="data">29.997 inHg (-0.049)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph S (180&#176;)</td>
+        <td class="data">8 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.6&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">36%</td>
       </tr>
     </tbody>
   </table>
@@ -237,7 +237,7 @@
         <td class="data new_row hilo_day">
           <span title="12:39:49 PM">
             50.5</span><br/>
-          <span title="01:05:27 PM">
+          <span title="01:35:41 PM">
             40.4</span>
         </td>
         <td class="data new_row hilo_week">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:03:01 AM">
             30.054</span><br/>
-          <span title="01:31:01 PM">
-            29.995</span>
+          <span title="01:34:01 PM">
+            29.994</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          176
+          179
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          215
+          214
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 22 hours, 47 minutes</td>
+      <td class="data">13 days, 22 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 22 hours, 47 minutes</td>
+      <td class="data">13 days, 22 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
